--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.servletandmaven</groupId>
-  <artifactId>ServletAndMavenDemo</artifactId>
-  <packaging>war</packaging>
+
+  <groupId>com.navin</groupId>
+  <artifactId>Telusko</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>ServletAndMavenDemo Maven Webapp</name>
+  <packaging>jar</packaging>
+
+  <name>Telusko</name>
   <url>http://maven.apache.org</url>
-  
-  
-   <properties>
-		<spring.version>5.1.7.RELEASE</spring.version>
-	</properties>
-  
+
+  <properties>
+   <maven.compiler.source>1.6</maven.compiler.source>
+    	<maven.compiler.target>1.6</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencies>
-  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -22,34 +24,12 @@
       <scope>test</scope>
     </dependency>
     
-     <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-             <version>8.0.15</version>
-    </dependency>
-    
-    <!-- Spring dependencies -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
- 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
- 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-     
-     
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+    <version>5.1.9.RELEASE</version>
+</dependency>
+
   </dependencies>
-  <build>
-    <finalName>ServletAndMavenDemo</finalName>
-  </build>
 </project>
